--- a/sections/what-you-get.liquid
+++ b/sections/what-you-get.liquid
@@ -127,7 +127,7 @@
 <style>
   .what-you-get-section {
     padding: 80px 20px;
-    background: #0A0A0A;
+    background: #050807;
   }
 
   .container {
